[metadata]
name=yaml-config
version=0.1.4
description=Python client for reading yaml based config files
author=Paul Munday, Fable Turas
author_email=paul@paulmunday.net, fable@rainsoftware.tech
maintainer=GreenBuildingRegistry
maintainer_email=admin@greenbuildingregistry.com
keywords= yaml, config, pyyaml
url=https://github.com/GreenBuildingRegistry/yaml-config
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	PyYAML>=3.13
	typing>=3.6.1
[bdist_wheel]
universal = 1
